--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,241 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+header {
+  height: 100px;
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 80px;
+  align-items: center;
+}
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  gap: 35px;
+  font-size: 18px;
+}
+
+.hero {
+  height: 373px;
+  width: 100%;
+  background-color: #495E57;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+}
+
+.title-section{
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.titles > h1 {
+  color: #F4CE14;
+  font-size: 50px;
+  margin: 0;
+}
+
+.titles > h2 {
   color: white;
+  font-size: 25px;
+  font-weight: 400;
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.title-section > p {
+  width: 350px;
+  color: white;
+  font-weight: 300;
+  font-size: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.food-image {
+  position: relative;
+  top: 40px; 
 }
+
+.food-image > img {
+  border-radius: 20px;
+}
+.primary-button {
+  background-color: #F4CE14;
+  height: 60px;
+  width: 254px;
+  border-radius: 20px;
+  border-style: none;
+  font-size: 18px;
+}
+
+.primary-button:hover {
+  cursor: pointer;
+}
+
+.highlights {
+  margin-top: 100px;
+  width: 850px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 550px;
+}
+
+.specials{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.cards {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.testimonials {
+  background-color: #495E57;
+  width: 100%;
+  height: 590px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.ratings {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+}
+
+.deliverybtn {
+  width: 50%;
+  border: none;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: "15px"
+}
+
+.deliverybtn:hover {
+  cursor: pointer;
+}
+
+.about {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.aboutInfo {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+}
+
+.photosMA {
+  display: flex;
+  flex-direction: column;
+}
+
+.border-red-500 {
+    border-color: #ef4444;
+}
+
+.text-red-500 {
+  border-color: #ef4444;
+}
+
+.form { 
+  background-color: #495E57;
+  color: #F4CE14; 
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 400px;
+  margin: 20px auto;
+  font-family: Arial, sans-serif;
+}
+
+.form label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.form input {
+  width: 94%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 2px solid #F4CE14;
+  border-radius: 5px;
+  background-color: #ffffff;
+  color: #495E57;
+  font-size: 16px;
+}
+
+.form select{
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 2px solid #F4CE14;
+  border-radius: 5px;
+  background-color: #ffffff;
+  color: #495E57;
+  font-size: 16px;
+}
+
+.form input:focus, .form select:focus {
+  outline: none;
+  border-color: #FFD700;
+}
+
+.form button {
+  width: 100%;
+  padding: 10px;
+  background-color: #F4CE14;
+  border: none;
+  border-radius: 5px;
+  color: #495E57;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.form button:hover {
+  background-color: #FFD700; 
+}
+
+@media (max-width: 500px) {
+  .form {
+      padding: 15px;
+  }
+  .form input, .form select, .form button {
+    font-size: 14px;
+    padding: 8px;
+}
+}
+
+
+
